[package]
name = "news-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4.2.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
askama = "0.12.0"
